<resources>
    <string name="app_name">Stamp</string>
    <string name="user">Hazelrust</string>
    <string name="pwd">123456</string>
    <string name="song">Music Library</string>
    <string name="photo">Share photos</string>
    <string name="place">Place Location</string>
    <string name="file">Contacts</string>
    <string name="create">New contact</string>
    <string name="open">Contact List</string>
    <string name="add_contact_title" />
    <string name="add_contact_message" />
    <string name="delete_contact_title" />
    <string name="delete_data_message" />
    <string name="update_contact_title" />
</resources>