<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/song"
        android:icon="@drawable/icons8_music_playlist_30"
        android:title="@string/song"
        app:showAsAction="always"
        android:orderInCategory="1"/>
    <item android:id="@+id/photo"
        android:icon="@drawable/icons8_gallery_48"
        android:title="@string/photo"
        app:showAsAction="always"
        android:orderInCategory="2"/>
    <item android:id="@+id/search"
        android:icon="@drawable/icons8_location_50"
        android:title="@string/place"
        app:showAsAction="ifRoom"
        android:orderInCategory="3"/>
    <item android:id="@+id/file"
        android:icon="@drawable/icons8_contact_list_24"
        android:title="@string/file"
        app:showAsAction="ifRoom|withText" >
        <!-- "file" submenu -->
        <menu>
            <item android:id="@+id/create"
                android:title="@string/create"
                android:textSize="14dp"/>

            <item android:id="@+id/open"
                android:title="@string/open"
                android:textSize="14dp"/>
        </menu>
    </item>
</menu>
